opam-version: "2.0"
version: "0.6"
maintainer: "Quentin Heath <12143333+qheath@users.noreply.github.com>"
authors: "Quentin Heath <12143333+qheath@users.noreply.github.com>"
homepage: "https://github.com/qheath/getarg"
bug-reports: "https://github.com/qheath/getarg/issues"
dev-repo: "git://github.com/qheath/getarg.git"
license: "GPL-3"
build: [
  ["dune" "build" "-p" name "-j" jobs "@install"]
  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]

depends: [
  "dune" {build}
]
synopsis: "Command-line option parser"
description: """
This library offers an alternative to the standard OCaml Arg module
with a support for short and long options (à la getopt).
It is similar to Getopt and Getopts, with a few key differences:
  - long options (with an expanded form that can take a mandatory
    argument)
  - no expanded form for short options with optional arguments
  - clusters of short options (mixing with and without arguments)"""
#url {
#  src: ""
#  checksum: ""
#}
